Added price Filter

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <title>Vite + React</title>
+    
+    <title>ShoeCraze</title>
+    <link rel="website icon" type="image/png" href="https://th.bing.com/th/id/OIP.M6n_U53so7bRHBmLm7d--QHaHa?rs=1&pid=ImgDetMain">
   </head>
   <body>
     <div id="root"></div>
